# p4_stat_arb

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  memo.md  pyproject.toml
.github/workflows/: ci.yml
configs/: p4_config.yaml  p4_smoke.yaml
docs/: TODO.md
docs/alpha_engine_trace/: blueprint.json
docs/alpha_engine_trace/fixture_smoke/: blueprint.json
docs/alpha_engine_trace/real_smoke/: ambiguity_log.md  blueprint.json
scripts/: render_readme_figures.py
src/p4/: __init__.py  backtest.py  capacity.py  cointegration.py  config.py  data_loader.py  eigenportfolio.py  extended_pipeline.py  johansen.py  kalman_ou.py  multiple_testing.py  neural_ou.py  ou_estimator.py  pair_selector.py  pipeline.py  regime_switch.py  run_sp500_ablation.py  signal.py  sp500_universe.py
tests/: __init__.py  conftest.py  test_backtest.py  test_cointegration.py  test_config_data_loader.py  test_eigenportfolio.py  test_extended_pipeline.py  test_johansen.py  test_kalman_ou.py  test_multiple_testing.py  test_multiple_testing_extended.py  test_neural_ou.py  test_ou_signal.py  test_pair_selector.py  test_pipeline_integration.py  test_regime_switch.py  test_run_sp500_ablation.py  test_sp500_universe.py
tests/fixtures/: adv_30d.csv  generate_fixture_data.py  metadata.csv  prices.csv  volume.csv
